Fix a typo in price and delete some spaces
